Closed Bug 1473103 Opened 6 years ago Closed 6 years ago

Regression test for mozglue DLL blocklist

Categories

(Core :: mozglue, defect, P1)

Unspecified
Windows
defect

Tracking

()

RESOLVED FIXED
mozilla64
Tracking Status
firefox63 --- wontfix
firefox64 --- fixed

People

(Reporter: bugzilla, Assigned: ccorcoran)

References

(Blocks 1 open bug)

Details

(Whiteboard: inj+)

Attachments

(1 file)

We might have been able to catch bug 1472030 before it reached Beta if we had a proper regression test for the DLL blocklist. I noticed that our existing blocklist already contains entries for "mozdllblockingtest.dll" and "mozdllblockingtest_versioned.dll" but a cursory code search doesn't show those libraries actually existing anywhere! In addition to testing some of the essential functionality, I'd also like us to validate that the entire array of blocklist entries is being generated correctly. In particular, I'd like to ensure that if we compare the ArrayLength(gWindowsDllBlocklist) == (the length of the blocklist if we scan it in a while loop searching for the terminating null entry). Carl, since you've already been dabbling in that area with gtests et al, I thought I'd send this your way.
Comment on attachment 8992890 [details] Bug 1473103: Add unit tests for DLL blocklist integrity; r?aklotz Aaron Klotz [:aklotz] has approved the revision.
Attachment #8992890 - Flags: review+
Keywords: checkin-needed
Pushed by ebalazs@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/9207b4b0e5db Add unit tests for DLL blocklist integrity; r=aklotz
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
Is this something we might want to consider for Beta backport or is manual QA sufficient?
Flags: needinfo?(ccorcoran)
I don't see any need to backport this.
Flags: needinfo?(ccorcoran)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: