Bug 1473103: Add unit tests for DLL blocklist integrity; r=aklotz

Differential Revision: https://phabricator.services.mozilla.com/D2219

--HG--
extra : moz-landing-system : lando